# TauriQueChique

./: .prettierrc.json  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx  painel.tsx  routeTree.gen.ts  routes.tsx
src-tauri/: .taurignore  Cargo.toml  que-chique.db  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/config/: database.rs  mod.rs  schemas.rs
src-tauri/src/models/: cliente.rs
src-tauri/src/repository/: cliente_repository.rs
src-tauri/src/service/: cliente_service.rs  mod.rs
src/api/: CaixasApi.ts  VendasApi.ts  clientesApi.ts  contasApi.ts  estoquesApi.ts
src/components/cliente/: colunas-component.tsx  dialog-atualizar.tsx  dialog-cadastrar.tsx
src/components/input-com-mascara/: index.tsx
src/components/sidebar-li/: index.tsx
src/components/ui/: data-table.tsx
src/hooks/: auth.tsx  escutar-clique-teclado.tsx  escutarCliqueTeclado.tsx  use-auth.tsx
src/layouts/: app-layout.tsx  app-loader.tsx
src/models/: Cliente.ts
src/models/enums/: Cor.ts  FormaPagamento.ts  Tecido.ts
src/pages/: login.tsx
src/pages/clientes/: Component.tsx  clienteDialog.tsx  clientesColunas.tsx  clientesPainel.tsx
src/routes/: __root.tsx  _auth.clientes.lazy.tsx  _auth.tsx  index.tsx  login.tsx
src/utils/: conversores.ts
