[package]
name = "tauri-que-chique"
version = "0.0.1"
description = "Um aplicativo em rust para estudos"
authors = ["Bruno Henrique de Medeiros"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.2", features = [ "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.38", features = ["serde"] }

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
